Course & Depatrment 調整 1.調整 CoursesController 加上 Memo 欄位 2.完成 CoursesController 比較好的 Model Binding 寫法 3.建立 Department 模型類別的 Buddy Class 4.使用 EFGeneratePartialClass.tt 快速產生 Buddy Class 並調整 Department 的驗證屬性

--- a/MVC5Demo/Views/Courses/Delete.cshtml
+++ b/MVC5Demo/Views/Courses/Delete.cshtml
@@ -28,6 +28,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Memo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Memo)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Department.Name)
         </dt>
 
