--- a/MVC5Demo/Views/Courses/Details.cshtml
+++ b/MVC5Demo/Views/Courses/Details.cshtml
@@ -27,6 +27,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Memo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Memo)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Department.Name)
         </dt>
 
