--- a/MVC5Demo/Views/Courses/Index.cshtml
+++ b/MVC5Demo/Views/Courses/Index.cshtml
@@ -18,6 +18,9 @@
             @Html.DisplayNameFor(model => model.Credits)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Memo)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Department.Name)
         </th>
         <th></th>
@@ -30,6 +33,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Credits)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Memo)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Department.Name)
